--- a/Pokka/Develop/index.html
+++ b/Pokka/Develop/index.html
@@ -1,39 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <div class="row my-row">
+      <div class="col my-col col-a1 colorcode" id="9"> 9am </div>
+      <div class="col my-col col-a2 edit_cont"><input type="text"></input> </div>
+      <div class="col my-col col-a3 saveBtn" id="save"> Save </div>
     </div>
+    <div class="row my-row">
+      <div class="col my-col col-b1 colorcode" id="10"> 10am </div>
+      <div class="col my-col col-b2 edit_cont"><input type="text"></input> </div>
+      <div class="col my-col col-b3 saveBtn"> Save </div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-c1 colorcode" id="11"> 11am </div>
+      <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"> Save </div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-c1 colorcode" id="12"> 12pm </div>
+      <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"> Save </div>
+      </div>
+      <div class="row my-row">
+        <div class="col my-col col-b1 colorcode" id="1"> 1pm </div>
+        <div class="col my-col col-b2 edit_cont"><input type="text"></input> </div>
+        <div class="col my-col col-b3 saveBtn"> Save </div>
+      </div>
+      <div class="row my-row">
+        <div class="col my-col col-c1 colorcode" id="2"> 2pm </div>
+        <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
+        <div class="col my-col col-c3 saveBtn"> Save </div>
+      </div>
+      <div class="row my-row">
+        <div class="col my-col col-c1 colorcode" id="3"> 3pm </div>
+        <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
+        <div class="col my-col col-c3 saveBtn"> Save </div>
+        </div>
+        <div class="row my-row">
+          <div class="col my-col col-b1 colorcode" id="4"> 4pm </div>
+          <div class="col my-col col-b2 edit_cont"><input type="text"></input> </div>
+          <div class="col my-col col-b3 saveBtn"> Save </div>
+        </div>
+        <div class="row my-row">
+          <div class="col my-col col-c1 colorcode" id="5"> 5pm </div>
+          <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
+          <div class="col my-col col-c3 saveBtn"> Save </div>
+        </div>
+          <!-- Timeblocks go here -->
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/java.js"></script>
-  </body>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="./assets/java.js"></script>
+</body>
+
 </html>
