added event listener for save button

--- a/Pokka/Develop/index.html
+++ b/Pokka/Develop/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <input id="description">
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
@@ -22,55 +23,55 @@
   <div class="container">
     <div class="row my-row">
       <div class="col my-col col-a1 colorcode" id="9"> 9am </div>
-      <div class="col my-col col-a2 edit_cont"><input type="text"></input> </div>
-      <div class="col my-col col-a3 saveBtn" id="save"> Save </div>
+      <div class="col my-col col-a2 description"><input type="text"></input> </div>
+      <div class="col my-col col-a3 saveBtn" id="save9"><button class="keep">Save</button> </div>
     </div>
     <div class="row my-row">
       <div class="col my-col col-b1 colorcode" id="10"> 10am </div>
-      <div class="col my-col col-b2 edit_cont"><input type="text"></input> </div>
-      <div class="col my-col col-b3 saveBtn"> Save </div>
+      <div class="col my-col col-b2 description"><input type="text"></input> </div>
+      <div class="col my-col col-b3 saveBtn"><button class="keep">Save</button></div>
     </div>
     <div class="row my-row">
       <div class="col my-col col-c1 colorcode" id="11"> 11am </div>
-      <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"> Save </div>
+      <div class="col my-col col-c2 description"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"><button class="keep">Save</button></div>
     </div>
     <div class="row my-row">
       <div class="col my-col col-c1 colorcode" id="12"> 12pm </div>
-      <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"> Save </div>
-      </div>
-      <div class="row my-row">
-        <div class="col my-col col-b1 colorcode" id="1"> 1pm </div>
-        <div class="col my-col col-b2 edit_cont"><input type="text"></input> </div>
-        <div class="col my-col col-b3 saveBtn"> Save </div>
-      </div>
-      <div class="row my-row">
-        <div class="col my-col col-c1 colorcode" id="2"> 2pm </div>
-        <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
-        <div class="col my-col col-c3 saveBtn"> Save </div>
-      </div>
-      <div class="row my-row">
-        <div class="col my-col col-c1 colorcode" id="3"> 3pm </div>
-        <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
-        <div class="col my-col col-c3 saveBtn"> Save </div>
-        </div>
-        <div class="row my-row">
-          <div class="col my-col col-b1 colorcode" id="4"> 4pm </div>
-          <div class="col my-col col-b2 edit_cont"><input type="text"></input> </div>
-          <div class="col my-col col-b3 saveBtn"> Save </div>
-        </div>
-        <div class="row my-row">
-          <div class="col my-col col-c1 colorcode" id="5"> 5pm </div>
-          <div class="col my-col col-c2 edit_cont"><input type="text"></input> </div>
-          <div class="col my-col col-c3 saveBtn"> Save </div>
-        </div>
-          <!-- Timeblocks go here -->
-        </div>
+      <div class="col my-col col-c2 description"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-b1 colorcode" id="1"> 1pm </div>
+      <div class="col my-col col-b2 description"><input type="text"></input> </div>
+      <div class="col my-col col-b3 saveBtn"><button>Save</button></div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-c1 colorcode" id="2"> 2pm </div>
+      <div class="col my-col col-c2 description"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-c1 colorcode" id="3"> 3pm </div>
+      <div class="col my-col col-c2 description"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-b1 colorcode" id="4"> 4pm </div>
+      <div class="col my-col col-b2 description"><input type="text"></input> </div>
+      <div class="col my-col col-b3 saveBtn"><button>Save</button></div>
+    </div>
+    <div class="row my-row">
+      <div class="col my-col col-c1 colorcode" id="5"> 5pm </div>
+      <div class="col my-col col-c2 description"><input type="text"></input> </div>
+      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+    </div>
+    <!-- Timeblocks go here -->
+  </div>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-        <script src="./assets/java.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/java.js"></script>
 </body>
 
 </html>
