added first local storage

--- a/Pokka/Develop/index.html
+++ b/Pokka/Develop/index.html
@@ -22,9 +22,10 @@
   </header>
   <div class="container">
     <div class="row my-row">
+      <!-- <div class="element" data-id="123456789"></div> -->
       <div class="col my-col col-a1 colorcode" id="9"> 9am </div>
-      <div class="col my-col col-a2 description"><input type="text"></input> </div>
-      <div class="col my-col col-a3 saveBtn" id="save9"><button class="keep">Save</button> </div>
+      <div class="col my-col col-a2 description"><input type="text" id="type"></input> </div>
+      <div class="col my-col col-a3 saveBtn" id="save9"><button class="keep" id="nine">Save</button> </div>
     </div>
     <div class="row my-row">
       <div class="col my-col col-b1 colorcode" id="10"> 10am </div>
