added accurate save button as well as finalized all save buttons

--- a/Pokka/Develop/index.html
+++ b/Pokka/Develop/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <input id="description">
+  <!-- <input id="description"> -->
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
@@ -22,50 +22,67 @@
   </header>
   <div class="container">
     <div class="row my-row">
-      <!-- <div class="element" data-id="123456789"></div> -->
       <div class="col my-col col-a1 colorcode" id="9"> 9am </div>
-      <div class="col my-col col-a2 description"><input type="text" id="type"></input> </div>
-      <div class="col my-col col-a3 saveBtn" id="save9"><button class="keep" id="nine">Save</button> </div>
+      <div class="col my-col col-a2 description"><input type="text" placeholder="type here" id="nine"></input> </div>
+      <div class="col my-col col-a3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
       <div class="col my-col col-b1 colorcode" id="10"> 10am </div>
-      <div class="col my-col col-b2 description"><input type="text"></input> </div>
-      <div class="col my-col col-b3 saveBtn"><button class="keep">Save</button></div>
+      <div class="col my-col col-b2 description"><input type="text" placeholder="type here" id="ten"></input> </div>
+      <div class="col my-col col-b3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
       <div class="col my-col col-c1 colorcode" id="11"> 11am </div>
-      <div class="col my-col col-c2 description"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"><button class="keep">Save</button></div>
+      <div class="col my-col col-c2 description"><input type="text" placeholder="type here" id="eleven"></input> </div>
+      <div class="col my-col col-c3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
-      <div class="col my-col col-c1 colorcode" id="12"> 12pm </div>
-      <div class="col my-col col-c2 description"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+      <div class="col my-col col-d1 colorcode" id="12"> 12pm </div>
+      <div class="col my-col col-d2 description"><input type="text" placeholder="type here" id="twelve"></input> </div>
+      <div class="col my-col col-d3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
-      <div class="col my-col col-b1 colorcode" id="1"> 1pm </div>
-      <div class="col my-col col-b2 description"><input type="text"></input> </div>
-      <div class="col my-col col-b3 saveBtn"><button>Save</button></div>
+      <div class="col my-col col-e1 colorcode" id="1"> 1pm </div>
+      <div class="col my-col col-e2 description"><input type="text" placeholder="type here" id="one"></input> </div>
+      <div class="col my-col col-e3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
-      <div class="col my-col col-c1 colorcode" id="2"> 2pm </div>
-      <div class="col my-col col-c2 description"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+      <div class="col my-col col-f1 colorcode" id="2"> 2pm </div>
+      <div class="col my-col col-f2 description"><input type="text" placeholder="type here" id="two"></input> </div>
+      <div class="col my-col col-f3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
-      <div class="col my-col col-c1 colorcode" id="3"> 3pm </div>
-      <div class="col my-col col-c2 description"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+      <div class="col my-col col-g1 colorcode" id="3"> 3pm </div>
+      <div class="col my-col col-g2 description"><input type="text" placeholder="type here" id="three"></input> </div>
+      <div class="col my-col col-g3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
-      <div class="col my-col col-b1 colorcode" id="4"> 4pm </div>
-      <div class="col my-col col-b2 description"><input type="text"></input> </div>
-      <div class="col my-col col-b3 saveBtn"><button>Save</button></div>
+      <div class="col my-col col-h1 colorcode" id="4"> 4pm </div>
+      <div class="col my-col col-h2 description"><input type="text" placeholder="type here" id="four"></input> </div>
+      <div class="col my-col col-h3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <div class="row my-row">
-      <div class="col my-col col-c1 colorcode" id="5"> 5pm </div>
-      <div class="col my-col col-c2 description"><input type="text"></input> </div>
-      <div class="col my-col col-c3 saveBtn"><button>Save</button></div>
+      <div class="col my-col col-i1 colorcode" id="5"> 5pm </div>
+      <div class="col my-col col-i2 description"><input type="text" placeholder="type here" id="five"></input> </div>
+      <div class="col my-col col-i3 saveBtn">
+        <button class="keep fas fa-save"></button>
+      </div>
     </div>
     <!-- Timeblocks go here -->
   </div>
